<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_bussines_cards">Cartão de Visita</string>
    <string name="label_description_new_card">Novo cartão</string>
    <string name="description_close_btn">close_btn</string>
    <string name="label_name">Nome</string>
    <string name="label_phone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_company">Nome da Empresa</string>
    <string name="label_color">Cor</string>
    <string name="label_register">Cadastrar</string>
    <string name="label_show_sucess">Cadastrado com Sucesso</string>
    <string name="label_share">Compartilhar</string>
</resources>